// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "vəː giːŋ siːz vəː gulh",
    },
    {
      "english": "the dogs see the wolves",
      "target": "vəː dɔːdɔːg siː vəː gugulh",
    },
    {
      "english": "i give you the bread",
      "target": "aj gɪvɪŋ ju",
    },
    {
      "english": "the king walks at the river",
      "target": "vəː giːŋ gɔːgɪŋz æd vəː ɹiːfəːɹ",
    },
    {
      "english": "the king does not see the wolf",
      "target": "vəː giːŋ nat siːz vəː gulh",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "bebe βidt duːpuːum",
    },
    {
      "english": "the dogs see the wolves",
      "target": "gaːbeae βidnt duːpuːium",
    },
    {
      "english": "i give you the bread",
      "target": "ego do tuam",
    },
    {
      "english": "the king walks at the river",
      "target": "bebe aːbbuːdt fduːbe",
    },
    {
      "english": "the king does not see the wolf",
      "target": "bebe non βidt duːpuːum",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ʃuulukəl fowel luki",
    },
    {
      "english": "the dogs see the wolves",
      "target": "fowel fowel luki",
    },
    {
      "english": "i give you the bread",
      "target": "mi sin kəl",
    },
    {
      "english": "the king walks at the river",
      "target": "ʃuulukəl fək tel kəw",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ʃuulukəl fowel al luki",
    },
  ],
  "preset": "tokipona",
}
`;
